y.output
Terminals unused in grammar

   BREAK
   CASE
   CLASS
   CONTINUE
   DO
   EXIT
   NULL_SCALA
   REPEAT
   TYPE
   "<="
   "=="
   "=>"
   "!="


State 94 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: OBJECT ID '{' $@1 block_contents_obj '}'

    3 block_contents_obj: block_content_obj
    4                   | block_contents_obj block_content_obj

    5 block_content_obj: declaration
    6                  | method

    7 $@2: %empty

    8 method: DEF ID '(' $@2 method_arg_con

    9 $@3: %empty

   10 method_arg_con: method_arg $@3 method_con

   11 method_arg: ')'
   12           | parameter ')'
   13           | ')' ':' type
   14           | parameter ')' ':' type

   15 method_con: '{' '}'
   16           | '{' block_contents '}'

   17 parameter: par
   18          | parameter ',' par

   19 par: ID ':' type

   20 block_contents: block_content
   21               | block_contents block_content

   22 block_content: declaration
   23              | statement
   24              | RETURN
   25              | RETURN expression

   26 $@4: %empty

   27 block_content: '{' $@4 '}'

   28 $@5: %empty

   29 block_content: '{' $@5 block_contents '}'

   30 declaration: val
   31            | var
   32            | array

   33 val: VAL ID '=' INT
   34    | VAL ID '=' TRUE
   35    | VAL ID '=' FALSE
   36    | VAL ID '=' STRING
   37    | VAL ID ':' type '=' INT
   38    | VAL ID ':' type '=' TRUE
   39    | VAL ID ':' type '=' FALSE
   40    | VAL ID ':' type '=' STRING

   41 var: VAR ID
   42    | VAR ID ':' type
   43    | VAR ID '=' var_assign
   44    | VAR ID ':' type '=' var_assign

   45 array: VAR ID ':' type '[' expression ']'

   46 var_assign: INT
   47           | TRUE
   48           | FALSE

   49 statement: ID
   50          | ID '=' expression
   51          | ID '(' ')'
   52          | ID '=' ID '(' ')'

   53 $@6: %empty

   54 statement: ID '(' $@6 expression_list ')'

   55 $@7: %empty

   56 statement: ID '=' ID '(' $@7 expression_list ')'
   57          | ID '[' expression ']' '=' expression
   58          | ID '[' expression ']' '=' ID '(' ')'

   59 $@8: %empty

   60 statement: ID '[' expression ']' '=' ID '(' $@8 expression_list ')'

   61 $@9: %empty

   62 statement: PRINT '(' $@9 expression ')'

   63 $@10: %empty

   64 statement: PRINTLN '(' $@10 expression ')'
   65          | READ ID
   66          | IF '(' boolean_expression ')' ifact block_or_statement
   67          | IF '(' boolean_expression ')' ifact block_or_statement ELSE elseact block_or_statement
   68          | FOR '(' ID '<' '-' INT TO INT ')' block_or_statement
   69          | WHILE '(' boolean_expression ')' block_or_statement

   70 ifact: %empty

   71 elseact: %empty

   72 expression_list: expression
   73                | expression_list ',' expression

   74 expression: expression '+' expression
   75           | expression '-' expression
   76           | expression '*' expression
   77           | expression '/' expression
   78           | expression '%' expression
   79           | '-' expression
   80           | '(' expression ')'

   81 $@11: %empty

   82 expression: $@11 data
   83           | ID

   84 boolean_expression: bool_data
   85                   | '!' boolean_expression
   86                   | '(' boolean_expression ')'
   87                   | boolean_expression AANDD boolean_expression
   88                   | boolean_expression OORR boolean_expression
   89                   | bool_data biop bool_data

   90 bool_data: ID
   91          | INT
   92          | CHAR
   93          | FLOAT
   94          | TRUE
   95          | FALSE

   96 biop: BIOP
   97     | '<'
   98     | '>'

   99 block_or_statement: '{' '}'

  100 $@12: %empty

  101 block_or_statement: '{' $@12 block_contents '}'
  102                   | statement

  103 type: INT
  104     | CHAR
  105     | FLOAT
  106     | STRING
  107     | BOOLEAN

  108 data: INT
  109     | CHAR
  110     | FLOAT
  111     | STRING
  112     | TRUE
  113     | FALSE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 85
'%' (37) 78
'(' (40) 8 51 52 54 56 58 60 62 64 66 67 68 69 80 86
')' (41) 11 12 13 14 51 52 54 56 58 60 62 64 66 67 68 69 80 86
'*' (42) 76
'+' (43) 74
',' (44) 18 73
'-' (45) 68 75 79
'/' (47) 77
':' (58) 13 14 19 37 38 39 40 42 44 45
'<' (60) 68 97
'=' (61) 33 34 35 36 37 38 39 40 43 44 50 52 56 57 58 60
'>' (62) 98
'[' (91) 45 57 58 60
']' (93) 45 57 58 60
'{' (123) 2 15 16 27 29 99 101
'}' (125) 2 15 16 27 29 99 101
error (256)
ID (258) 2 8 19 33 34 35 36 37 38 39 40 41 42 43 44 45 49 50 51 52
    54 56 57 58 60 65 68 83 90
BIOP (259) 96
AANDD (260) 87
OORR (261) 88
BREAK (262)
CASE (263)
CLASS (264)
CONTINUE (265)
DEF (266) 8
DO (267)
ELSE (268) 67
EXIT (269)
FOR (270) 68
IF (271) 66 67
NULL_SCALA (272)
OBJECT (273) 2
PRINT (274) 62
PRINTLN (275) 64
READ (276) 65
REPEAT (277)
RETURN (278) 24 25
TO (279) 68
TYPE (280)
VAL (281) 33 34 35 36 37 38 39 40
VAR (282) 41 42 43 44 45
WHILE (283) 69
TRUE (284) 34 38 47 94 112
FALSE (285) 35 39 48 95 113
INT (286) 33 37 46 68 91 103 108
CHAR (287) 92 104 109
FLOAT (288) 93 105 110
STRING (289) 36 40 106 111
BOOLEAN (290) 107
"<=" (291)
"==" (292)
"=>" (293)
"!=" (294)
UMINUS (295)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 2, on right: 0
$@1 (60)
    on left: 1, on right: 2
block_contents_obj (61)
    on left: 3 4, on right: 2 4
block_content_obj (62)
    on left: 5 6, on right: 3 4
method (63)
    on left: 8, on right: 6
$@2 (64)
    on left: 7, on right: 8
method_arg_con (65)
    on left: 10, on right: 8
$@3 (66)
    on left: 9, on right: 10
method_arg (67)
    on left: 11 12 13 14, on right: 10
method_con (68)
    on left: 15 16, on right: 10
parameter (69)
    on left: 17 18, on right: 12 14 18
par (70)
    on left: 19, on right: 17 18
block_contents (71)
    on left: 20 21, on right: 16 21 29 101
block_content (72)
    on left: 22 23 24 25 27 29, on right: 20 21
$@4 (73)
    on left: 26, on right: 27
$@5 (74)
    on left: 28, on right: 29
declaration (75)
    on left: 30 31 32, on right: 5 22
val (76)
    on left: 33 34 35 36 37 38 39 40, on right: 30
var (77)
    on left: 41 42 43 44, on right: 31
array (78)
    on left: 45, on right: 32
var_assign (79)
    on left: 46 47 48, on right: 43 44
statement (80)
    on left: 49 50 51 52 54 56 57 58 60 62 64 65 66 67 68 69, on right:
    23 102
$@6 (81)
    on left: 53, on right: 54
$@7 (82)
    on left: 55, on right: 56
$@8 (83)
    on left: 59, on right: 60
$@9 (84)
    on left: 61, on right: 62
$@10 (85)
    on left: 63, on right: 64
ifact (86)
    on left: 70, on right: 66 67
elseact (87)
    on left: 71, on right: 67
expression_list (88)
    on left: 72 73, on right: 54 56 60 73
expression (89)
    on left: 74 75 76 77 78 79 80 82 83, on right: 25 45 50 57 58 60
    62 64 72 73 74 75 76 77 78 79 80
$@11 (90)
    on left: 81, on right: 82
boolean_expression (91)
    on left: 84 85 86 87 88 89, on right: 66 67 69 85 86 87 88
bool_data (92)
    on left: 90 91 92 93 94 95, on right: 84 89
biop (93)
    on left: 96 97 98, on right: 89
block_or_statement (94)
    on left: 99 101 102, on right: 66 67 68 69
$@12 (95)
    on left: 100, on right: 101
type (96)
    on left: 103 104 105 106 107, on right: 13 14 19 37 38 39 40 42
    44 45
data (97)
    on left: 108 109 110 111 112 113, on right: 82


State 0

    0 $accept: . program $end

    OBJECT  shift, and go to state 1

    program  go to state 2


State 1

    2 program: OBJECT . ID '{' $@1 block_contents_obj '}'

    ID  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    2 program: OBJECT ID . '{' $@1 block_contents_obj '}'

    '{'  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 program: OBJECT ID '{' . $@1 block_contents_obj '}'

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 6

    2 program: OBJECT ID '{' $@1 . block_contents_obj '}'

    DEF  shift, and go to state 7
    VAL  shift, and go to state 8
    VAR  shift, and go to state 9

    block_contents_obj  go to state 10
    block_content_obj   go to state 11
    method              go to state 12
    declaration         go to state 13
    val                 go to state 14
    var                 go to state 15
    array               go to state 16


State 7

    8 method: DEF . ID '(' $@2 method_arg_con

    ID  shift, and go to state 17


State 8

   33 val: VAL . ID '=' INT
   34    | VAL . ID '=' TRUE
   35    | VAL . ID '=' FALSE
   36    | VAL . ID '=' STRING
   37    | VAL . ID ':' type '=' INT
   38    | VAL . ID ':' type '=' TRUE
   39    | VAL . ID ':' type '=' FALSE
   40    | VAL . ID ':' type '=' STRING

    ID  shift, and go to state 18


State 9

   41 var: VAR . ID
   42    | VAR . ID ':' type
   43    | VAR . ID '=' var_assign
   44    | VAR . ID ':' type '=' var_assign
   45 array: VAR . ID ':' type '[' expression ']'

    ID  shift, and go to state 19


State 10

    2 program: OBJECT ID '{' $@1 block_contents_obj . '}'
    4 block_contents_obj: block_contents_obj . block_content_obj

    DEF  shift, and go to state 7
    VAL  shift, and go to state 8
    VAR  shift, and go to state 9
    '}'  shift, and go to state 20

    block_content_obj  go to state 21
    method             go to state 12
    declaration        go to state 13
    val                go to state 14
    var                go to state 15
    array              go to state 16


State 11

    3 block_contents_obj: block_content_obj .

    $default  reduce using rule 3 (block_contents_obj)


State 12

    6 block_content_obj: method .

    $default  reduce using rule 6 (block_content_obj)


State 13

    5 block_content_obj: declaration .

    $default  reduce using rule 5 (block_content_obj)


State 14

   30 declaration: val .

    $default  reduce using rule 30 (declaration)


State 15

   31 declaration: var .

    $default  reduce using rule 31 (declaration)


State 16

   32 declaration: array .

    $default  reduce using rule 32 (declaration)


State 17

    8 method: DEF ID . '(' $@2 method_arg_con

    '('  shift, and go to state 22


State 18

   33 val: VAL ID . '=' INT
   34    | VAL ID . '=' TRUE
   35    | VAL ID . '=' FALSE
   36    | VAL ID . '=' STRING
   37    | VAL ID . ':' type '=' INT
   38    | VAL ID . ':' type '=' TRUE
   39    | VAL ID . ':' type '=' FALSE
   40    | VAL ID . ':' type '=' STRING

    ':'  shift, and go to state 23
    '='  shift, and go to state 24


State 19

   41 var: VAR ID .
   42    | VAR ID . ':' type
   43    | VAR ID . '=' var_assign
   44    | VAR ID . ':' type '=' var_assign
   45 array: VAR ID . ':' type '[' expression ']'

    ':'  shift, and go to state 25
    '='  shift, and go to state 26

    $default  reduce using rule 41 (var)


State 20

    2 program: OBJECT ID '{' $@1 block_contents_obj '}' .

    $default  reduce using rule 2 (program)


State 21

    4 block_contents_obj: block_contents_obj block_content_obj .

    $default  reduce using rule 4 (block_contents_obj)


State 22

    8 method: DEF ID '(' . $@2 method_arg_con

    $default  reduce using rule 7 ($@2)

    $@2  go to state 27


State 23

   37 val: VAL ID ':' . type '=' INT
   38    | VAL ID ':' . type '=' TRUE
   39    | VAL ID ':' . type '=' FALSE
   40    | VAL ID ':' . type '=' STRING

    INT      shift, and go to state 28
    CHAR     shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    type  go to state 33


State 24

   33 val: VAL ID '=' . INT
   34    | VAL ID '=' . TRUE
   35    | VAL ID '=' . FALSE
   36    | VAL ID '=' . STRING

    TRUE    shift, and go to state 34
    FALSE   shift, and go to state 35
    INT     shift, and go to state 36
    STRING  shift, and go to state 37


State 25

   42 var: VAR ID ':' . type
   44    | VAR ID ':' . type '=' var_assign
   45 array: VAR ID ':' . type '[' expression ']'

    INT      shift, and go to state 28
    CHAR     shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    type  go to state 38


State 26

   43 var: VAR ID '=' . var_assign

    TRUE   shift, and go to state 39
    FALSE  shift, and go to state 40
    INT    shift, and go to state 41

    var_assign  go to state 42


State 27

    8 method: DEF ID '(' $@2 . method_arg_con

    ID   shift, and go to state 43
    ')'  shift, and go to state 44

    method_arg_con  go to state 45
    method_arg      go to state 46
    parameter       go to state 47
    par             go to state 48


State 28

  103 type: INT .

    $default  reduce using rule 103 (type)


State 29

  104 type: CHAR .

    $default  reduce using rule 104 (type)


State 30

  105 type: FLOAT .

    $default  reduce using rule 105 (type)


State 31

  106 type: STRING .

    $default  reduce using rule 106 (type)


State 32

  107 type: BOOLEAN .

    $default  reduce using rule 107 (type)


State 33

   37 val: VAL ID ':' type . '=' INT
   38    | VAL ID ':' type . '=' TRUE
   39    | VAL ID ':' type . '=' FALSE
   40    | VAL ID ':' type . '=' STRING

    '='  shift, and go to state 49


State 34

   34 val: VAL ID '=' TRUE .

    $default  reduce using rule 34 (val)


State 35

   35 val: VAL ID '=' FALSE .

    $default  reduce using rule 35 (val)


State 36

   33 val: VAL ID '=' INT .

    $default  reduce using rule 33 (val)


State 37

   36 val: VAL ID '=' STRING .

    $default  reduce using rule 36 (val)


State 38

   42 var: VAR ID ':' type .
   44    | VAR ID ':' type . '=' var_assign
   45 array: VAR ID ':' type . '[' expression ']'

    '='  shift, and go to state 50
    '['  shift, and go to state 51

    $default  reduce using rule 42 (var)


State 39

   47 var_assign: TRUE .

    $default  reduce using rule 47 (var_assign)


State 40

   48 var_assign: FALSE .

    $default  reduce using rule 48 (var_assign)


State 41

   46 var_assign: INT .

    $default  reduce using rule 46 (var_assign)


State 42

   43 var: VAR ID '=' var_assign .

    $default  reduce using rule 43 (var)


State 43

   19 par: ID . ':' type

    ':'  shift, and go to state 52


State 44

   11 method_arg: ')' .
   13           | ')' . ':' type

    ':'  shift, and go to state 53

    $default  reduce using rule 11 (method_arg)


State 45

    8 method: DEF ID '(' $@2 method_arg_con .

    $default  reduce using rule 8 (method)


State 46

   10 method_arg_con: method_arg . $@3 method_con

    $default  reduce using rule 9 ($@3)

    $@3  go to state 54


State 47

   12 method_arg: parameter . ')'
   14           | parameter . ')' ':' type
   18 parameter: parameter . ',' par

    ')'  shift, and go to state 55
    ','  shift, and go to state 56


State 48

   17 parameter: par .

    $default  reduce using rule 17 (parameter)


State 49

   37 val: VAL ID ':' type '=' . INT
   38    | VAL ID ':' type '=' . TRUE
   39    | VAL ID ':' type '=' . FALSE
   40    | VAL ID ':' type '=' . STRING

    TRUE    shift, and go to state 57
    FALSE   shift, and go to state 58
    INT     shift, and go to state 59
    STRING  shift, and go to state 60


State 50

   44 var: VAR ID ':' type '=' . var_assign

    TRUE   shift, and go to state 39
    FALSE  shift, and go to state 40
    INT    shift, and go to state 41

    var_assign  go to state 61


State 51

   45 array: VAR ID ':' type '[' . expression ']'

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 65
    $@11        go to state 66


State 52

   19 par: ID ':' . type

    INT      shift, and go to state 28
    CHAR     shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    type  go to state 67


State 53

   13 method_arg: ')' ':' . type

    INT      shift, and go to state 28
    CHAR     shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    type  go to state 68


State 54

   10 method_arg_con: method_arg $@3 . method_con

    '{'  shift, and go to state 69

    method_con  go to state 70


State 55

   12 method_arg: parameter ')' .
   14           | parameter ')' . ':' type

    ':'  shift, and go to state 71

    $default  reduce using rule 12 (method_arg)


State 56

   18 parameter: parameter ',' . par

    ID  shift, and go to state 43

    par  go to state 72


State 57

   38 val: VAL ID ':' type '=' TRUE .

    $default  reduce using rule 38 (val)


State 58

   39 val: VAL ID ':' type '=' FALSE .

    $default  reduce using rule 39 (val)


State 59

   37 val: VAL ID ':' type '=' INT .

    $default  reduce using rule 37 (val)


State 60

   40 val: VAL ID ':' type '=' STRING .

    $default  reduce using rule 40 (val)


State 61

   44 var: VAR ID ':' type '=' var_assign .

    $default  reduce using rule 44 (var)


State 62

   83 expression: ID .

    $default  reduce using rule 83 (expression)


State 63

   80 expression: '(' . expression ')'

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 73
    $@11        go to state 66


State 64

   79 expression: '-' . expression

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 74
    $@11        go to state 66


State 65

   45 array: VAR ID ':' type '[' expression . ']'
   74 expression: expression . '+' expression
   75           | expression . '-' expression
   76           | expression . '*' expression
   77           | expression . '/' expression
   78           | expression . '%' expression

    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ']'  shift, and go to state 80


State 66

   82 expression: $@11 . data

    TRUE    shift, and go to state 81
    FALSE   shift, and go to state 82
    INT     shift, and go to state 83
    CHAR    shift, and go to state 84
    FLOAT   shift, and go to state 85
    STRING  shift, and go to state 86

    data  go to state 87


State 67

   19 par: ID ':' type .

    $default  reduce using rule 19 (par)


State 68

   13 method_arg: ')' ':' type .

    $default  reduce using rule 13 (method_arg)


State 69

   15 method_con: '{' . '}'
   16           | '{' . block_contents '}'

    ID       shift, and go to state 88
    FOR      shift, and go to state 89
    IF       shift, and go to state 90
    PRINT    shift, and go to state 91
    PRINTLN  shift, and go to state 92
    READ     shift, and go to state 93
    RETURN   shift, and go to state 94
    VAL      shift, and go to state 8
    VAR      shift, and go to state 9
    WHILE    shift, and go to state 95
    '{'      shift, and go to state 96
    '}'      shift, and go to state 97

    block_contents  go to state 98
    block_content   go to state 99
    declaration     go to state 100
    val             go to state 14
    var             go to state 15
    array           go to state 16
    statement       go to state 101


State 70

   10 method_arg_con: method_arg $@3 method_con .

    $default  reduce using rule 10 (method_arg_con)


State 71

   14 method_arg: parameter ')' ':' . type

    INT      shift, and go to state 28
    CHAR     shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    type  go to state 102


State 72

   18 parameter: parameter ',' par .

    $default  reduce using rule 18 (parameter)


State 73

   74 expression: expression . '+' expression
   75           | expression . '-' expression
   76           | expression . '*' expression
   77           | expression . '/' expression
   78           | expression . '%' expression
   80           | '(' expression . ')'

    ')'  shift, and go to state 103
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79


State 74

   74 expression: expression . '+' expression
   75           | expression . '-' expression
   76           | expression . '*' expression
   77           | expression . '/' expression
   78           | expression . '%' expression
   79           | '-' expression .

    $default  reduce using rule 79 (expression)


State 75

   74 expression: expression '+' . expression

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 104
    $@11        go to state 66


State 76

   75 expression: expression '-' . expression

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 105
    $@11        go to state 66


State 77

   76 expression: expression '*' . expression

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 106
    $@11        go to state 66


State 78

   77 expression: expression '/' . expression

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 107
    $@11        go to state 66


State 79

   78 expression: expression '%' . expression

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 108
    $@11        go to state 66


State 80

   45 array: VAR ID ':' type '[' expression ']' .

    $default  reduce using rule 45 (array)


State 81

  112 data: TRUE .

    $default  reduce using rule 112 (data)


State 82

  113 data: FALSE .

    $default  reduce using rule 113 (data)


State 83

  108 data: INT .

    $default  reduce using rule 108 (data)


State 84

  109 data: CHAR .

    $default  reduce using rule 109 (data)


State 85

  110 data: FLOAT .

    $default  reduce using rule 110 (data)


State 86

  111 data: STRING .

    $default  reduce using rule 111 (data)


State 87

   82 expression: $@11 data .

    $default  reduce using rule 82 (expression)


State 88

   49 statement: ID .
   50          | ID . '=' expression
   51          | ID . '(' ')'
   52          | ID . '=' ID '(' ')'
   54          | ID . '(' $@6 expression_list ')'
   56          | ID . '=' ID '(' $@7 expression_list ')'
   57          | ID . '[' expression ']' '=' expression
   58          | ID . '[' expression ']' '=' ID '(' ')'
   60          | ID . '[' expression ']' '=' ID '(' $@8 expression_list ')'

    '('  shift, and go to state 109
    '='  shift, and go to state 110
    '['  shift, and go to state 111

    $default  reduce using rule 49 (statement)


State 89

   68 statement: FOR . '(' ID '<' '-' INT TO INT ')' block_or_statement

    '('  shift, and go to state 112


State 90

   66 statement: IF . '(' boolean_expression ')' ifact block_or_statement
   67          | IF . '(' boolean_expression ')' ifact block_or_statement ELSE elseact block_or_statement

    '('  shift, and go to state 113


State 91

   62 statement: PRINT . '(' $@9 expression ')'

    '('  shift, and go to state 114


State 92

   64 statement: PRINTLN . '(' $@10 expression ')'

    '('  shift, and go to state 115


State 93

   65 statement: READ . ID

    ID  shift, and go to state 116


State 94

   24 block_content: RETURN .
   25              | RETURN . expression

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    ID        [reduce using rule 24 (block_content)]
    TRUE      reduce using rule 81 ($@11)
    FALSE     reduce using rule 81 ($@11)
    INT       reduce using rule 81 ($@11)
    CHAR      reduce using rule 81 ($@11)
    FLOAT     reduce using rule 81 ($@11)
    STRING    reduce using rule 81 ($@11)
    $default  reduce using rule 24 (block_content)

    expression  go to state 117
    $@11        go to state 66


State 95

   69 statement: WHILE . '(' boolean_expression ')' block_or_statement

    '('  shift, and go to state 118


State 96

   27 block_content: '{' . $@4 '}'
   29              | '{' . $@5 block_contents '}'

    '}'       reduce using rule 26 ($@4)
    $default  reduce using rule 28 ($@5)

    $@4  go to state 119
    $@5  go to state 120


State 97

   15 method_con: '{' '}' .

    $default  reduce using rule 15 (method_con)


State 98

   16 method_con: '{' block_contents . '}'
   21 block_contents: block_contents . block_content

    ID       shift, and go to state 88
    FOR      shift, and go to state 89
    IF       shift, and go to state 90
    PRINT    shift, and go to state 91
    PRINTLN  shift, and go to state 92
    READ     shift, and go to state 93
    RETURN   shift, and go to state 94
    VAL      shift, and go to state 8
    VAR      shift, and go to state 9
    WHILE    shift, and go to state 95
    '{'      shift, and go to state 96
    '}'      shift, and go to state 121

    block_content  go to state 122
    declaration    go to state 100
    val            go to state 14
    var            go to state 15
    array          go to state 16
    statement      go to state 101


State 99

   20 block_contents: block_content .

    $default  reduce using rule 20 (block_contents)


State 100

   22 block_content: declaration .

    $default  reduce using rule 22 (block_content)


State 101

   23 block_content: statement .

    $default  reduce using rule 23 (block_content)


State 102

   14 method_arg: parameter ')' ':' type .

    $default  reduce using rule 14 (method_arg)


State 103

   80 expression: '(' expression ')' .

    $default  reduce using rule 80 (expression)


State 104

   74 expression: expression . '+' expression
   74           | expression '+' expression .
   75           | expression . '-' expression
   76           | expression . '*' expression
   77           | expression . '/' expression
   78           | expression . '%' expression

    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79

    $default  reduce using rule 74 (expression)


State 105

   74 expression: expression . '+' expression
   75           | expression . '-' expression
   75           | expression '-' expression .
   76           | expression . '*' expression
   77           | expression . '/' expression
   78           | expression . '%' expression

    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79

    $default  reduce using rule 75 (expression)


State 106

   74 expression: expression . '+' expression
   75           | expression . '-' expression
   76           | expression . '*' expression
   76           | expression '*' expression .
   77           | expression . '/' expression
   78           | expression . '%' expression

    $default  reduce using rule 76 (expression)


State 107

   74 expression: expression . '+' expression
   75           | expression . '-' expression
   76           | expression . '*' expression
   77           | expression . '/' expression
   77           | expression '/' expression .
   78           | expression . '%' expression

    $default  reduce using rule 77 (expression)


State 108

   74 expression: expression . '+' expression
   75           | expression . '-' expression
   76           | expression . '*' expression
   77           | expression . '/' expression
   78           | expression . '%' expression
   78           | expression '%' expression .

    $default  reduce using rule 78 (expression)


State 109

   51 statement: ID '(' . ')'
   54          | ID '(' . $@6 expression_list ')'

    ')'  shift, and go to state 123

    $default  reduce using rule 53 ($@6)

    $@6  go to state 124


State 110

   50 statement: ID '=' . expression
   52          | ID '=' . ID '(' ')'
   56          | ID '=' . ID '(' $@7 expression_list ')'

    ID   shift, and go to state 125
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 126
    $@11        go to state 66


State 111

   57 statement: ID '[' . expression ']' '=' expression
   58          | ID '[' . expression ']' '=' ID '(' ')'
   60          | ID '[' . expression ']' '=' ID '(' $@8 expression_list ')'

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression  go to state 127
    $@11        go to state 66


State 112

   68 statement: FOR '(' . ID '<' '-' INT TO INT ')' block_or_statement

    ID  shift, and go to state 128


State 113

   66 statement: IF '(' . boolean_expression ')' ifact block_or_statement
   67          | IF '(' . boolean_expression ')' ifact block_or_statement ELSE elseact block_or_statement

    ID     shift, and go to state 129
    TRUE   shift, and go to state 130
    FALSE  shift, and go to state 131
    INT    shift, and go to state 132
    CHAR   shift, and go to state 133
    FLOAT  shift, and go to state 134
    '('    shift, and go to state 135
    '!'    shift, and go to state 136

    boolean_expression  go to state 137
    bool_data           go to state 138


State 114

   62 statement: PRINT '(' . $@9 expression ')'

    $default  reduce using rule 61 ($@9)

    $@9  go to state 139


State 115

   64 statement: PRINTLN '(' . $@10 expression ')'

    $default  reduce using rule 63 ($@10)

    $@10  go to state 140


State 116

   65 statement: READ ID .

    $default  reduce using rule 65 (statement)


State 117

   25 block_content: RETURN expression .
   74 expression: expression . '+' expression
   75           | expression . '-' expression
   76           | expression . '*' expression
   77           | expression . '/' expression
   78           | expression . '%' expression

    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79

    $default  reduce using rule 25 (block_content)


State 118

   69 statement: WHILE '(' . boolean_expression ')' block_or_statement

    ID     shift, and go to state 129
    TRUE   shift, and go to state 130
    FALSE  shift, and go to state 131
    INT    shift, and go to state 132
    CHAR   shift, and go to state 133
    FLOAT  shift, and go to state 134
    '('    shift, and go to state 135
    '!'    shift, and go to state 136

    boolean_expression  go to state 141
    bool_data           go to state 138


State 119

   27 block_content: '{' $@4 . '}'

    '}'  shift, and go to state 142


State 120

   29 block_content: '{' $@5 . block_contents '}'

    ID       shift, and go to state 88
    FOR      shift, and go to state 89
    IF       shift, and go to state 90
    PRINT    shift, and go to state 91
    PRINTLN  shift, and go to state 92
    READ     shift, and go to state 93
    RETURN   shift, and go to state 94
    VAL      shift, and go to state 8
    VAR      shift, and go to state 9
    WHILE    shift, and go to state 95
    '{'      shift, and go to state 96

    block_contents  go to state 143
    block_content   go to state 99
    declaration     go to state 100
    val             go to state 14
    var             go to state 15
    array           go to state 16
    statement       go to state 101


State 121

   16 method_con: '{' block_contents '}' .

    $default  reduce using rule 16 (method_con)


State 122

   21 block_contents: block_contents block_content .

    $default  reduce using rule 21 (block_contents)


State 123

   51 statement: ID '(' ')' .

    $default  reduce using rule 51 (statement)


State 124

   54 statement: ID '(' $@6 . expression_list ')'

    ID   shift, and go to state 62
    '('  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 81 ($@11)

    expression_list  go to state 144
    expression       go to state 145
    $@11             go to state 66


State 125

   52 statement: ID '=' ID . '(' ')'
   56          | ID '=' ID . '(' $@7 expression_list ')'
   83 expression: ID .

    '('  shift, and go to state 146

    $default  reduce using rule 83 (expression)


State 126

   50 statement: ID '=' expression .
   74 expression: expression . '+' expression
   75           | expression . '-' expression
   76           | expression . '*' expression
   77           | expression . '/' expression
   78           | expression . '%' expression

    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79

    $default  reduce using rule 50 (statement)


State 127

   57 statement: ID '[' expression . ']' '=' expression
   58          | ID '[' expression . ']' '=' ID '(' ')'
   60          | ID '[' expression . ']' '=' ID '(' $@8 expression_list ')'
   74 expression: expression . '+' expression
   75           | expression . '-' expression
   76           | expression . '*' expression
   77           | expression . '/' expression
   78           | expression . '%' expression

    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ']'  shift, and go to state 147


State 128

   68 statement: FOR '(' ID . '<' '-' INT TO INT ')' block_or_statement

    '<'  shift, and go to state 148


State 129

   90 bool_data: ID .

    $default  reduce using rule 90 (bool_data)


State 130

   94 bool_data: TRUE .

    $default  reduce using rule 94 (bool_data)


State 131

   95 bool_data: FALSE .

    $default  reduce using rule 95 (bool_data)


State 132

   91 bool_data: INT .

    $default  reduce using rule 91 (bool_data)


State 133

   92 bool_data: CHAR .

    $default  reduce using rule 92 (bool_data)


State 134

   93 bool_data: FLOAT .

    $default  reduce using rule 93 (bool_data)


State 135

   86 boolean_expression: '(' . boolean_expression ')'
